--- a/adminuser/files/sb-admin2/register.html
+++ b/adminuser/files/sb-admin2/register.html
@@ -41,15 +41,9 @@
                                 <h1 class="h4 text-gray-900 mb-4">Buat Akun Baru!</h1>
                             </div>
                             <form class="user">
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                            placeholder="Nama depan">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="exampleLastName"
-                                            placeholder="Nama belakang">
-                                    </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                                        placeholder="Username">
                                 </div>
                                 <div class="form-group">
                                     <input type="email" class="form-control form-control-user" id="exampleInputEmail"
@@ -57,14 +51,15 @@
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleInputPassword" placeholder="Kata sandi">
+                                        <input type="text" class="form-control form-control-user" id="exampleFirstName"
+                                            placeholder="Password">
                                     </div>
                                     <div class="col-sm-6">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleRepeatPassword" placeholder="Kata sandi lagi">
+                                        <input type="text" class="form-control form-control-user" id="exampleLastName"
+                                            placeholder="Kode Registrasi">
                                     </div>
                                 </div>
+                                
                                 <a href="index.html" class="btn btn-primary btn-user btn-block">
                                     Registrasi
                                 </a>
