--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -183,7 +183,7 @@
                                         melalui DANA, OVO, atau E-Banking.</p>
                                 </li>
                             </ul><!-- /.list-unstyled -->
-                            <a href="registrasi.html" class="thm-btn cta-two__btn">Daftar Segera!</a><!-- /.thm-btn -->
+                            <a href="sb-admin1/register.html" class="thm-btn cta-two__btn">Daftar Segera!</a><!-- /.thm-btn -->
                         </div><!-- /.cta-two__content -->
                     </div><!-- /.col-lg-6 -->
                 </div><!-- /.row -->
@@ -206,7 +206,7 @@
                                     Yayasan</h2><!-- /.block-title__title -->
                             </div><!-- /.block-title -->
                             <p class="cta-three__text">Semua tagihan seperti SPP, Uang Buku, Sumbangan dan lain-lain, akan lebih mudah diinformasikan dan dibayarkan oleh orang tua siswa.</p><!-- /.cta-two__tagline -->
-                            <a href="registrasi.html" class="thm-btn cta-three__btn">Daftar Segera!</a><!-- /.thm-btn -->
+                            <a href="sb-admin1/register.html" class="thm-btn cta-three__btn">Daftar Segera!</a><!-- /.thm-btn -->
                         </div><!-- /.cta-two__content -->
                     </div><!-- /.col-lg-5 -->
                 </div><!-- /.row -->
