--- a/adminuser/files/sb-admin2/tables.html
+++ b/adminuser/files/sb-admin2/tables.html
@@ -317,11 +317,10 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Tabel Data Siswa</h1>
-
-                    <!-- DataTales Tables -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">Data Siswa</h6>
+                        </div>
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
