--- a/adminuser/files/sb-admin2/index.html
+++ b/adminuser/files/sb-admin2/index.html
@@ -73,6 +73,12 @@
                     <span>Data Siswa</span></a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="dataspp.html">
+                    <i class="fas fa-fw fa-cash-register"></i>
+                    <span>Data Pembayaran</span></a>
+              </li>
+
             <!-- Nav Item - Kalender -->
             <li class="nav-item">
                 <a class="nav-link" href="kalender.html">
