--- a/adminuser/files/sb-admin2/index.html
+++ b/adminuser/files/sb-admin2/index.html
@@ -79,6 +79,13 @@
                     <span>Data Pembayaran</span></a>
               </li>
 
+            <!-- Nav Item - History -->
+            <li class="nav-item">
+                <a class="nav-link" href="historypembayaran.html">
+                    <i class="fas fa-fw fa-history"></i>
+                    <span>History Pembayaran</span></a>
+            </li>
+
             <!-- Nav Item - Kalender -->
             <li class="nav-item">
                 <a class="nav-link" href="kalender.html">
