--- a/adminuser/files/sb-admin2/tables.html
+++ b/adminuser/files/sb-admin2/tables.html
@@ -77,6 +77,20 @@
                 <span>Data Siswa</span></a>
         </li>
 
+        <!-- Nav Item - Tables -->
+        <li class="nav-item">
+            <a class="nav-link" href="dataspp.html">
+                <i class="fas fa-fw fa-cash-register"></i>
+                <span>Data Pembayaran</span></a>
+          </li>
+
+         <!-- Nav Item - History -->
+         <li class="nav-item">
+            <a class="nav-link" href="historypembayaran.html">
+                <i class="fas fa-fw fa-history"></i>
+                <span>History Pembayaran</span></a>
+        </li>
+
         <!-- Nav Item - Kalender -->
         <li class="nav-item">
             <a class="nav-link" href="kalender.html">
