--- a/adminuser/files/sb-admin2/edit_siswa.html
+++ b/adminuser/files/sb-admin2/edit_siswa.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
 
-    <title>bayarSPP | USER</title>
+    <title>bayarSPP | ADMIN</title>
 
     <!-- Custom fonts for this template -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -60,17 +60,31 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item active">
-                <a class="nav-link active" href="myprofile.php">
+            <li class="nav-item">
+                <a class="nav-link" href="myprofile.php">
                     <i class="fas fa-fw fa-user"></i>
                     <span>My Profile</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+            <li class="nav-item active">
+                <a class="nav-link active" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
+                    <span>Data Siswa</span></a>
+            </li>
+
+            <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <a class="nav-link" href="dataspp.html">
+                    <i class="fas fa-fw fa-cash-register"></i>
                     <span>Data Pembayaran</span></a>
+              </li>
+
+            <!-- Nav Item - History -->
+            <li class="nav-item">
+                <a class="nav-link" href="historypembayaran.html">
+                    <i class="fas fa-fw fa-history"></i>
+                    <span>History Pembayaran</span></a>
             </li>
 
             <!-- Nav Item - Kalender -->
@@ -332,12 +346,12 @@
 
                             <div class="form-group">
                                 <label for="name">Nama Siswa</label>
-                                <input type="text" class="form-control" name="name"  placeholder="Masukan Nama Anda" value="<?php echo $row['name']; ?>">
+                                <input type="text" class="form-control" name="name"  placeholder="Masukkan Nama Anda">
                             </div>
                           
                             <div class="form-group">
                                 <label for="nisn">NISN</label>
-                                <input type="text" class="form-control" name="nisn"  placeholder="Masukan NISN Anda" value="<?php echo $row['nisn']; ?>">
+                                <input type="text" class="form-control" name="nisn"  placeholder="Masukkan NISN Anda">
                             </div>
 
                             <div class="mb-3">
