--- a/adminuser/files/sb-admin2/historypembayaran.html
+++ b/adminuser/files/sb-admin2/historypembayaran.html
@@ -358,27 +358,27 @@
                                 <tr>
                                     <td>NISN</td>
                                     <td>:</td>
-                                    <td><?= $r_siswa['nisn']; ?></td>
+                                    <td>07654334567</td>
                                 </tr>
                                 <tr>
                                     <td>Nama</td>
                                     <td>:</td>
-                                    <td><?= $r_siswa['nama']; ?></td>
+                                    <td>Bagas</td>
                                 </tr>
                                 <tr>
                                     <td>Jenis Kelamin</td>
                                     <td>:</td>
-                                    <td><?= $r_siswa['jeniskelamin']; ?></td>
+                                    <td>Laki-laki</td>
                                 </tr>
                                 <tr>
                                     <td>Kelas / Jurusan</td>
                                     <td>:</td>
-                                    <td><?= $r_siswa['nama_kelas'] . " | " . $r_siswa['kompetensi_keahlian']; ?></td>
+                                    <td>XI RPL A</td>
                                 </tr>
                                 <tr>
                                     <td>Alamat</td>
                                     <td>:</td>
-                                    <td><?= $r_siswa['alamat']; ?></td>
+                                    <td>Malang</td>
                                 </tr>
                             </table>
                             <br>
