--- a/adminuser/files/sb-admin2/profile_siswa.html
+++ b/adminuser/files/sb-admin2/profile_siswa.html
@@ -69,6 +69,19 @@
                                 <i class="fas fa-fw fa-table"></i>
                                 <span>Data Siswa</span></a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="dataspp.html">
+                                <i class="fas fa-fw fa-cash-register"></i>
+                                <span>Data Pembayaran</span></a>
+                          </li>
+            
+                        <!-- Nav Item - History -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="historypembayaran.html">
+                                <i class="fas fa-fw fa-history"></i>
+                                <span>History Pembayaran</span></a>
+                        </li>
             
                          <!-- Nav Item - Kalender -->
                          <li class="nav-item">
