--- a/adminuser/files/sb-admin1/editprofil.html
+++ b/adminuser/files/sb-admin1/editprofil.html
@@ -343,8 +343,8 @@
       
                               <div class="form-group">
                                   <label>Kelas / Jurusan</label>
-                                      <select class="form-control" name="bulan">
-                                          <option value="">Pilih Bulan</option>
+                                      <select class="form-control" name="jeniskelamin">
+                                          <option value="">Pilih Kelas / Jurusan</option>
                                           <option>X RPL A</option>
                                           <option>X RPL B</option>
                                           <option>X RPL C</option>
