--- a/adminuser/files/sb-admin2/tables.html
+++ b/adminuser/files/sb-admin2/tables.html
@@ -339,7 +339,7 @@
                             <div class="table-responsive">
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead>
-                                        <tr>
+                                        <tr class="text-center">
                                             <th>Nama Siswa</th>
                                             <th>NISN</th>
                                             <th>Jenis Kelamin</th>
@@ -357,12 +357,21 @@
                                             <td>malang</td>
                                             <td>
                                                 <a href="profile_siswa.html" class="btn btn-info btn-icon-split">
-                                                <span class="text">detail</span>
+                                                    <span class="icon text-white-30">
+                                                        <i class="fas fa-book-reader fa-sm"></i>
+                                                    </span>
+                                                    <span class="text">Detail</span>
                                                 </a>
                                                 <a href="edit_siswa.html" class="btn btn-warning btn-icon-split">
+                                                    <span class="icon text-white-30">
+                                                    <i class="fas fa-edit"></i>
+                                                    </span>
                                                 <span class="text">edit</span>
                                                 </a>
                                                 <a href="#" class="btn btn-danger btn-icon-split">
+                                                    <span class="icon text-white-30">
+                                                    <i class="fas fa-trash"></i>
+                                                    </span>
                                                 <span class="text">hapus</span>
                                                 </a>
                                                  
