--- a/adminuser/files/index.html
+++ b/adminuser/files/index.html
@@ -60,7 +60,7 @@
                             <li class="scrollToLink">
                                 <a href="#pricing">Pembayaran</a>
                             </li>
-                            <li class="scrollToLink">
+                            <li class="scrollToLink mx-5">
                                 <a href="#news">About</a>
                                 <ul class="sub-menu">
                                 </ul><!-- /.sub-menu -->
