--- a/adminuser/files/sb-admin2/dataspp.html
+++ b/adminuser/files/sb-admin2/dataspp.html
@@ -336,6 +336,8 @@
                                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                     <thead class="text-center thead-light">
                                         <tr>
+                                            <th scope="col">Nama Siswa</th>
+                                            <th scope="col">NISN</th>
                                             <th scope="col">No Pembayaran</th>
                                             <th scope="col">Bulan Bayar</th>
                                             <th scope="col">Tanggal Pembayaran</th>
@@ -347,17 +349,19 @@
                                     </thead>
                                     <tbody>
                                         <tr>
+                                            <td>Bagas</td>
+                                            <td class="text-center">4144</td>
                                             <td class="text-center">123456</td>
                                             <td>September</td>
                                             <th class="text-center">12-09-2020</th>
                                             <td>Rp 100.000,00</td>
                                             <td>Rp 1.100.000,00</td>
                                             <td class="text-center">Lunas</td>
-                                            <td class="text-center">
-
-                                                <a href="bayar.html" class="btn btn-success btn-icon-split">
-                                                    <span class="text">Bayar</span>
-                                                </a>
+                                            <td>
+                                                
+                                                <a href="#" class="btn btn-warning float-left "><i class="fa fa-edit"></i></a>
+                                                <a href="#" class="btn btn-danger delete "><i class="fa fa-trash"></i></a>
+                              
 
                                             </td>
                                         </tr>                
