--- a/adminuser/files/sb-admin1/register.html
+++ b/adminuser/files/sb-admin1/register.html
@@ -70,8 +70,12 @@
                                         placeholder="Alamat email">
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                                    <input type="password" class="form-control form-control-user" id="exampleInputEmail"
                                         placeholder="Password">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control form-control-user" id="exampleInputEmail"
+                                        placeholder="Kode Registrasi">
                                 </div>
                                 <a href="login.html" class="btn btn-primary btn-user btn-block">
                                     Registrasi
