--- a/adminuser/files/sb-admin2/register.html
+++ b/adminuser/files/sb-admin2/register.html
@@ -51,12 +51,12 @@
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="exampleFirstName"
+                                        <input type="password" class="form-control form-control-user" id="exampleFirstName"
                                             placeholder="Password">
                                     </div>
                                     <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="exampleLastName"
-                                            placeholder="Kode Registrasi">
+                                        <input type="password" class="form-control form-control-user" id="exampleLastName"
+                                            placeholder="Konfirmasi password">
                                     </div>
                                 </div>
                                 
