--- a/adminuser/files/sb-admin1/bayar.html
+++ b/adminuser/files/sb-admin1/bayar.html
@@ -365,9 +365,9 @@
                         <label for="exampleInputEmail1" class="form-label">
                         <input type="radio" name="metode" id="flexRadioDefault1" value="Gopay"> GOPAY <br>
                         <label for="exampleInputEmail1" class="form-label">
-                        <input type="radio" name="dana" id="flexRadioDefault1" value="Dana"> DANA <br>
+                        <input type="radio" name="metode" id="flexRadioDefault1" value="Dana"> DANA <br>
                         <label for="exampleInputEmail1" class="form-label">
-                        <input type="radio" name="ebank" id="flexRadioDefault1" value="E-Banking"> E-Banking <br>
+                        <input type="radio" name="metode" id="flexRadioDefault1" value="E-Banking"> E-Banking <br>
                         </label>
                     </div> 
                     
