--- a/adminuser/files/sb-admin1/index.html
+++ b/adminuser/files/sb-admin1/index.html
@@ -66,16 +66,15 @@
             <!-- Nav Item - Tables -->
             <li class="nav-item">
                 <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Data Pembayaran</span></a>
+                    <i class="far fa-fw fa-credit-card"></i>
+                    <span>Tagihan Pembayaran</span></a>
             </li>
 
-            <!-- Nav Item - Kalender -->
             <li class="nav-item">
-                <a class="nav-link" href="kalender.html">
-                    <i class="fas fa-fw fa-calendar"></i>
-                    <span>Kalender</span></a>
-            </li>
+                <a class="nav-link" href="laporanspp.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Laporan Pembayaran</span></a>
+              </li>
 
             <li class="nav-item">
                 <a class="nav-link" href="../index.html">
