--- a/adminuser/files/sb-admin1/register.html
+++ b/adminuser/files/sb-admin1/register.html
@@ -71,10 +71,10 @@
                                 </div>
                                 <div class="form-group">
                                     <input type="password" class="form-control form-control-user" id="exampleInputEmail"
-                                        placeholder="Password">
+                                        placeholder="Kata Sandi">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control form-control-user" id="exampleInputEmail"
+                                    <input type="text" class="form-control form-control-user" id="exampleInputEmail"
                                         placeholder="Kode Registrasi">
                                 </div>
                                 <a href="login.html" class="btn btn-primary btn-user btn-block">
