--- a/adminuser/files/sb-admin2/dataspp.html
+++ b/adminuser/files/sb-admin2/dataspp.html
@@ -338,7 +338,7 @@
                                         <tr>
                                             <th scope="col">Nama Siswa</th>
                                             <th scope="col">NISN</th>
-                                            <th scope="col">No Pembayaran</th>
+                                            <th scope="col">Kelas/Jurusan</th>
                                             <th scope="col">Bulan Bayar</th>
                                             <th scope="col">Tanggal Pembayaran</th>
                                             <th scope="col">Jumlah Bayar</th>
@@ -351,7 +351,7 @@
                                         <tr>
                                             <td>Bagas</td>
                                             <td class="text-center">4144</td>
-                                            <td class="text-center">123456</td>
+                                            <td class="text-center">XI RPL</td>
                                             <td>September</td>
                                             <th class="text-center">12-09-2020</th>
                                             <td>Rp 100.000,00</td>
