--- a/adminuser/files/sb-admin1/laporan.html
+++ b/adminuser/files/sb-admin1/laporan.html
@@ -70,21 +70,13 @@
             <li class="nav-item ">
                 <a class="nav-link " href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Data Pembayaran</span></a>
+                    <span>Tagihan Pembayaran</span></a>
             </li>
 
             <li class="nav-item active">
                 <a class="nav-link actives  " href="laporan.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Laporan Pembayaran</span></a>
-            </li>
-
-
-             <!-- Nav Item - Kalender -->
-             <li class="nav-item">
-                <a class="nav-link" href="kalender.html">
-                    <i class="fas fa-fw fa-calendar"></i>
-                    <span>Kalender</span></a>
             </li>
 
             <li class="nav-item">
