--- a/adminuser/files/sb-admin1/tables.html
+++ b/adminuser/files/sb-admin1/tables.html
@@ -74,7 +74,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="laporanspp.html">
+                <a class="nav-link" href="laporan.html">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Laporan Pembayaran</span></a>
             </li>
