--- a/adminuser/files/sb-admin1/bayar.html
+++ b/adminuser/files/sb-admin1/bayar.html
@@ -67,19 +67,18 @@
                     <span>My Profile</span></a>
             </li>
 
-            <!-- Nav Item - Tables -->
-            <li class="nav-item active">
-                <a class="nav-link active" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Data Pembayaran</span></a>
-            </li>
+           <!-- Nav Item - Tables -->
+           <li class="nav-item ">
+            <a class="nav-link " href="tables.html">
+                <i class="fas fa-fw fa-credit-card"></i>
+                <span>Tagihan Pembayaran</span></a>
+           </li>
 
-            <!-- Nav Item - Kalender -->
-            <li class="nav-item">
-                <a class="nav-link" href="kalender.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Kalender</span></a>
-            </li>
+           <li class="nav-item active">
+            <a class="nav-link actives  " href="laporan.html">
+                <i class="fas fa-fw fa-table"></i>
+                <span>Laporan Pembayaran</span></a>
+           </li>
 
             <li class="nav-item">
                 <a class="nav-link" href="../index.html">
@@ -338,25 +337,6 @@
                     <div class="form-group">
                         <label for="exampleInputEmail1" class="form-label">Tanggal Pembayaran</label>
                         <input type="date" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    </div>
-
-                    <div class="form-group">
-                        <label>Bulan Pembayaran</label>
-                        <select class="form-control" name="bulan">
-                            <option value="">Pilih Bulan</option>
-                                <option>Januari</option>
-                                <option>Februari</option>
-                                <option>Maret</option>
-                                <option>April</option>
-                                <option>Mei</option>
-                                <option>Juni</option>
-                                <option>Juli</option>
-                                <option>Agustus</option>
-                                <option>September</option>
-                                <option>Oktober</option>
-                                <option>November</option>
-                                <option>Desember</option>
-                        </select>
                     </div>
 
                     <div class="mb-3">
