--- a/adminuser/files/sb-admin2/index2.html
+++ b/adminuser/files/sb-admin2/index2.html
@@ -275,7 +275,7 @@
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
-                <div class="container-fluid mb-10">
+                <div class="container-fluid modal-body">
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
@@ -284,12 +284,11 @@
 
                     <!-- Content Row -->
                     <div class="row">
-                      <div class="col-lg-4 mb-4">
+                      <div class="col-lg-4 ">
 
                         <form action="index.html" method="post">
                           <div class="form-group">
-                              
-                              <input type="password" class="form-control" id="current_password" name="current_password" placeholder="Masukkan kode registrasi">
+                              <input type="password" class="form-control" id="kode_registrasi" name="kode_registrasi" placeholder="Masukkan kode registrasi">
                           </div>
                         </form>
 
@@ -307,15 +306,7 @@
             </div>
             <!-- End of Main Content -->
 
-            <!-- Footer -->
-            <footer class="sticky-footer bg-white">
-                <div class="container my-auto">
-                    <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
-                    </div>
-                </div>
-            </footer>
-            <!-- End of Footer -->
+            
 
         </div>
         <!-- End of Content Wrapper -->
