--- a/adminuser/files/sb-admin2/register.html
+++ b/adminuser/files/sb-admin2/register.html
@@ -60,7 +60,7 @@
                                     </div>
                                 </div>
                                 
-                                <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                <a href="index2.html" class="btn btn-primary btn-user btn-block">
                                     Registrasi
                                 </a>
                                 <hr>
