--- a/adminuser/files/sb-admin2/index2.html
+++ b/adminuser/files/sb-admin2/index2.html
@@ -81,15 +81,13 @@
                     <!-- Topbar Search -->
                     <form
                         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                                aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
-                        </div>
+                        <a class="navbar-brand" href="https://www.smkn8malang.sch.id/">
+                          <img id="logo" src="img/smkn8malang.png" width="55" height="55" alt="Logo SMKN 8 MALANG">
+                          <b>SMK NEGERI 8 MALANG</b>
+
+                        </a>
+
+
                     </form>
 
                     <!-- Topbar Navbar -->
