--- a/adminuser/files/sb-admin1/bayar.html
+++ b/adminuser/files/sb-admin1/bayar.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/bayarSPP-5.png">
 
     <title>bayarSPP | USER</title>
 
@@ -34,13 +34,14 @@
         <!-- Sidebar -->
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-            <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+             <!-- Sidebar - Brand -->
+             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
                 </div>
-                <img src="img/bayarSPP-3.png" class="main-logo" width="275" alt="Awesome Image" />
+                <img src="img/bayarSPP-5.png" class="main-logo" width="50" alt="Awesome Image" />
+                <div class="sidebar-brand-text mx-3">bayar<i>SPP</i></div>
             </a>
-
+            
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
 
