--- a/adminuser/files/sb-admin2/register.html
+++ b/adminuser/files/sb-admin2/register.html
@@ -43,11 +43,31 @@
                             <form class="user">
                                 <div class="form-group">
                                     <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                        placeholder="Username">
+                                        placeholder="Nama Sekolah">
                                 </div>
                                 <div class="form-group">
                                     <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                        placeholder="Alamat email">
+                                        placeholder="Email Sekolah">
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <input type="number" class="form-control form-control-user" id="exampleFirstName"
+                                            placeholder="No Telepon Sekolah">
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <input type="text" class="form-control form-control-user" id="exampleLastName"
+                                            placeholder="Alamat">
+                                    </div>
+                                </div>
+
+
+                                <div class="form-group">
+                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                                        placeholder="nama pengguna">
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                                        placeholder="email pengguna">
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
@@ -59,15 +79,13 @@
                                             placeholder="Konfirmasi password">
                                     </div>
                                 </div>
+
+                                <br>
                                 
-                                <a href="index2.html" class="btn btn-primary btn-user btn-block">
+                                <a href="index.html" class="btn btn-primary btn-user btn-block">
                                     Registrasi
                                 </a>
-                                <hr>
-                                <a href="index.html" class="btn btn-google btn-user btn-block">
-                                    <i class="fab fa-google fa-fw"></i> Register with Google
-                                </a>
-                            </form>
+                                
                             <hr>
                             <div class="text-center">
                                 <a class="small" href="forgot-password.html">Lupa Kata Sandi?</a>
