--- a/adminuser/files/sb-admin1/bayar.html
+++ b/adminuser/files/sb-admin1/bayar.html
@@ -62,24 +62,29 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-
                 <a class="nav-link" href="myprofile.php">
                     <i class="fas fa-fw fa-user"></i>
                     <span>My Profile</span></a>
             </li>
 
-           <!-- Nav Item - Tables -->
-           <li class="nav-item ">
-            <a class="nav-link " href="tables.html">
-                <i class="fas fa-fw fa-credit-card"></i>
-                <span>Tagihan Pembayaran</span></a>
-           </li>
+            <li class="nav-item ">
+                <a class="nav-link " href="profile_sekolah.html">
+                    <i class="fas fa-fw fa-book"></i>
+                    <span>Profile Sekolah</span></a>
+            </li>
 
-           <li class="nav-item active">
-            <a class="nav-link actives  " href="laporan.html">
-                <i class="fas fa-fw fa-table"></i>
-                <span>Laporan Pembayaran</span></a>
-           </li>
+            <!-- Nav Item - Tables -->
+            <li class="nav-item active">
+                <a class="nav-link active" href="tables.html">
+                    <i class="far fa-fw fa-credit-card"></i>
+                    <span>Tagihan Pembayaran</span></a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="laporan.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Laporan Pembayaran</span></a>
+            </li>
 
             <li class="nav-item">
                 <a class="nav-link" href="../index.html">
