--- a/adminuser/files/sb-admin1/tables.html
+++ b/adminuser/files/sb-admin1/tables.html
@@ -67,9 +67,15 @@
                     <span>My Profile</span></a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="profile_sekolah.html">
+                    <i class="fas fa-fw fa-book"></i>
+                    <span>Profile Sekolah</span></a>
+            </li>
+
             <!-- Nav Item - Tables -->
             <li class="nav-item active">
-                <a class="nav-link active" href="tables.html">
+                <a class="nav-link activehref="tables.html">
                     <i class="far fa-fw fa-credit-card"></i>
                     <span>Tagihan Pembayaran</span></a>
             </li>
