--- a/adminuser/files/sb-admin1/editprofil.html
+++ b/adminuser/files/sb-admin1/editprofil.html
@@ -64,18 +64,23 @@
                     <span>My Profile</span></a>
             </li>
 
+            <li class="nav-item ">
+                <a class="nav-link " href="profile_sekolah.html">
+                    <i class="fas fa-fw fa-book"></i>
+                    <span>Profile Sekolah</span></a>
+            </li>
+
             <!-- Nav Item - Tables -->
             <li class="nav-item">
                 <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Data Pembayaran</span></a>
+                    <i class="far fa-fw fa-credit-card"></i>
+                    <span>Tagihan Pembayaran</span></a>
             </li>
 
-            <!-- Nav Item - Kalender -->
             <li class="nav-item">
-                <a class="nav-link" href="kalender.html">
-                    <i class="fas fa-fw fa-calendar"></i>
-                    <span>Kalender</span></a>
+                <a class="nav-link" href="laporan.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Laporan Pembayaran</span></a>
             </li>
 
             <li class="nav-item">
