--- a/adminuser/files/sb-admin2/index.html
+++ b/adminuser/files/sb-admin2/index.html
@@ -120,7 +120,12 @@
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
                     </button>
-
+                <!-- Topbar Search -->
+                <form
+                class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                <br>
+                <p>DASHBOARD</p> 
+                </form>
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
 
@@ -188,10 +193,28 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+                        <h1 class="h4 mb-0 text-gray-800">Haii, SMK Negeri 8 Malang</h1>
+                    </div>
+                    <br>
+                    <!-- Page Heading -->
+                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                        <h1 class="h6 mb-0 text-gray-800">Nama Sekolah <br>
+                         SMKN 8 Malang
+                        </h1>
+                        <h1 class="h6 mb-0 text-gray-800">Kode Sekolah <br>
+                         dd6641e105
+                        </h1>
+                        <h1 class="h6 mb-0 text-gray-800">Alamat <br>
+                        JL. Teluk Pacitan, Malang
+                        </h1>
+                        <h1 class="h6 mb-0 text-gray-800">Email <br>
+                        freedomcode@gmail.com
+                        </h1>
+                        <h1 class="h6 mb-0 text-gray-800">No. Telepon <br>
+                        0875432345
+                        </h1>
                     </div>
 
                     <!-- Content Row -->
