--- a/adminuser/files/sb-admin2/dataspp.html
+++ b/adminuser/files/sb-admin2/dataspp.html
@@ -128,7 +128,7 @@
                      <form
                      class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                      <br>
-                     <p>DATA PEMBAYARAN</p> 
+                     <p>DATA PAYMENT</p> 
                      </form>
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
