--- a/adminuser/files/sb-admin2/edit_siswa.html
+++ b/adminuser/files/sb-admin2/edit_siswa.html
@@ -127,7 +127,7 @@
                     <form
                     class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                     <br>
-                    <p>EDIT SISWA</p> 
+                    <p>EDIT STUDENT</p> 
                     </form>
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
