--- a/adminuser/files/sb-admin2/profile_siswa.html
+++ b/adminuser/files/sb-admin2/profile_siswa.html
@@ -127,23 +127,9 @@
 
                     <!-- Topbar Search -->
                     <form
-                        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                                aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-
-                    <!-- Topbar Search -->
-                    <form
                     class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                     <br>
-                    <p>PROFIL SISWA</p> 
+                    <p>PROFILE STUDENT</p> 
                     </form>
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -343,7 +329,7 @@
                     <!-- Illustrations -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary"><left>Profile Siswa</left></h6>
+                            <h6 class="m-0 font-weight-bold text-primary"><left>Profil Siswa</left></h6>
                         </div>
                         <div class="card-body">
                         <center><div class="col-md-">
