--- a/adminuser/files/sb-admin2/historypembayaran.html
+++ b/adminuser/files/sb-admin2/historypembayaran.html
@@ -122,7 +122,7 @@
                     <form
                     class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                     <br>
-                    <p>HISTORI PEMBAYARAN</p> 
+                    <p>HISTORY PAYMENT</p> 
                     </form>
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
