--- a/adminuser/files/sb-admin2/index.html
+++ b/adminuser/files/sb-admin2/index.html
@@ -198,24 +198,6 @@
                         <h1 class="h4 mb-0 text-gray-800">Haii, SMK Negeri 8 Malang</h1>
                     </div>
                     <br>
-                    <!-- Page Heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h6 mb-0 text-gray-800">Nama Sekolah <br>
-                         SMKN 8 Malang
-                        </h1>
-                        <h1 class="h6 mb-0 text-gray-800">Kode Sekolah <br>
-                         dd6641e105
-                        </h1>
-                        <h1 class="h6 mb-0 text-gray-800">Alamat <br>
-                        JL. Teluk Pacitan, Malang
-                        </h1>
-                        <h1 class="h6 mb-0 text-gray-800">Email <br>
-                        freedomcode@gmail.com
-                        </h1>
-                        <h1 class="h6 mb-0 text-gray-800">No. Telepon <br>
-                        0875432345
-                        </h1>
-                    </div>
 
                     <!-- Content Row -->
                     <div class="row">
@@ -228,11 +210,29 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Earnings (Monthly)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                                                Nama Sekolah</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">SMKN 8 Malang</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                            <i class="fas fa-school fa-2x text-gray-300"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Earnings (Monthly) Card Example -->
+                        <div class="col-xl-3 col-md-6 mb-4">
+                            <div class="card border-left-danger shadow h-100 py-2">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
+                                                Alamat</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">JL. Teluk Pacitan</div>
+                                        </div>
+                                        <div class="col-auto">
+                                            <i class="fas fa-map-marked fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -246,40 +246,11 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Earnings (Annual)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                                                Kode Registrasi</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">asdf6373hu</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Earnings (Monthly) Card Example -->
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-info shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Tasks
-                                            </div>
-                                            <div class="row no-gutters align-items-center">
-                                                <div class="col-auto">
-                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
-                                                </div>
-                                                <div class="col">
-                                                    <div class="progress progress-sm mr-2">
-                                                        <div class="progress-bar bg-info" role="progressbar"
-                                                            style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                                            aria-valuemax="100"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                                            <i class="fas fa-address-card fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -293,11 +264,11 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                                Pending Requests</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                                Email</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">freedomcode.sch</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-comments fa-2x text-gray-300"></i>
+                                            <i class="fas fa-envelope fa-2x text-gray-300"></i>
                                         </div>
                                     </div>
                                 </div>
