--- a/adminuser/files/sb-admin2/editsandi.html
+++ b/adminuser/files/sb-admin2/editsandi.html
@@ -61,7 +61,6 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-
                 <a class="nav-link" href="myprofile.php">
                     <i class="fas fa-fw fa-user"></i>
                     <span>My Profile</span></a>
@@ -71,8 +70,32 @@
             <li class="nav-item">
                 <a class="nav-link" href="tables.html">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Data Pembayaran</span></a>
+                    <span>Data Siswa</span></a>
             </li>
+
+            <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <a class="nav-link" href="dataspp.html">
+                    <i class="fas fa-fw fa-cash-register"></i>
+                    <span>Data Pembayaran</span></a>
+              </li>
+
+            <!-- Nav Item - History -->
+            <li class="nav-item">
+                <a class="nav-link" href="historypembayaran.html">
+                    <i class="fas fa-fw fa-history"></i>
+                    <span>History Pembayaran</span></a>
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider d-none d-md-block">
+
+            <!-- Sidebar Toggler (Sidebar) -->
+            <div class="text-center d-none d-md-inline">
+                <button class="rounded-circle border-0" id="sidebarToggle"></button>
+            </div>
+
+        </ul>
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -311,9 +334,8 @@
                             <div class="card-body">
                       
                     <div class="form-group">
-                        <label for="exampleInputEmail1" class="form-label">Kata Sandi Lama</label><br>
-                        <i style="float: left;font-size: 11px;color: red">Kata Sandi Harus Sesuai</i>
-                        <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Sandi Lama">
+                        <label for="exampleInputEmail1" class="form-label">Kata Sandi Saat Ini</label><br>
+                        <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukkan Sandi Saat Ini">
                     </div>
                     <br>
 
