--- a/adminuser/files/sb-admin2/kelas_X.html
+++ b/adminuser/files/sb-admin2/kelas_X.html
@@ -90,7 +90,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Pembayaran kelas:</h6>
-                        <a class="collapse-item" href="kelas_X.html">X</a>
+                        <a class="collapse-item active" href="kelas_X.html">X</a>
                         <a class="collapse-item" href="kelas_XI.html">XI</a>
                         <a class="collapse-item" href="kelas_XII.html">XII</a>
                     </div>
