--- a/adminuser/files/sb-admin2/kelas_XII.html
+++ b/adminuser/files/sb-admin2/kelas_XII.html
@@ -92,7 +92,7 @@
                         <h6 class="collapse-header">Pembayaran kelas:</h6>
                         <a class="collapse-item" href="kelas_X.html">X</a>
                         <a class="collapse-item" href="kelas_XI.html">XI</a>
-                        <a class="collapse-item" href="kelas_XII.html">XII</a>
+                        <a class="collapse-item active" href="kelas_XII.html">XII</a>
                     </div>
                 </div>
             </li>
