--- a/adminuser/files/sb-admin1/laporan.html
+++ b/adminuser/files/sb-admin1/laporan.html
@@ -70,7 +70,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="profile_sekolah.html">
                     <i class="fas fa-fw fa-book"></i>
-                    <span>Profile Sekolah</span></a>
+                    <span>Profil Sekolah</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
