--- a/adminuser/files/sb-admin1/editprofil.html
+++ b/adminuser/files/sb-admin1/editprofil.html
@@ -64,9 +64,9 @@
                     <span>My Profile</span></a>
             </li>
 
-            <li class="nav-item ">
-                <a class="nav-link " href="profile_sekolah.html">
-                    <i class="fas fa-fw fa-book"></i>
+            <li class="nav-item">
+                <a class="nav-link" href="profile_sekolah.html">
+                    <i class="fas fa-fw fa-school"></i>
                     <span>Profil Sekolah</span></a>
             </li>
 
