--- a/adminuser/files/sb-admin1/profile_sekolah.html
+++ b/adminuser/files/sb-admin1/profile_sekolah.html
@@ -66,7 +66,7 @@
 
             <li class="nav-item active">
                 <a class="nav-link active" href="profile_sekolah.html">
-                    <i class="fas fa-fw fa-book"></i>
+                    <i class="fas fa-fw fa-school"></i>
                     <span>Profil Sekolah</span></a>
             </li>
 
