--- a/adminuser/files/sb-admin1/editsandi.html
+++ b/adminuser/files/sb-admin1/editsandi.html
@@ -61,8 +61,8 @@
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item active">
-                <a class="nav-link active" href="myprofile.php">
+            <li class="nav-item">
+                <a class="nav-link" href="myprofile.php">
                     <i class="fas fa-fw fa-user"></i>
                     <span>My Profile</span></a>
             </li>
@@ -220,7 +220,7 @@
                     <div class="form-group">
                         <left>
                         <button type="submit" name="Submit" class="btn btn-primary waves">Konfirmasi</button>
-                         <a href="tables.html" class="btn btn-success btn-icon-split">
+                         <a href="index.html" class="btn btn-success btn-icon-split">
                             <span class="icon text-white-50">
                                 <i class="fas fa-arrow-right"></i>
                             </span>
