--- a/adminuser/files/sb-admin2/index.html
+++ b/adminuser/files/sb-admin2/index.html
@@ -277,10 +277,10 @@
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
                                                 Email</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">freedomcode.sch</div>
+                                            <div class="h6 mb-0 font-weight-bold text-gray-800">asta@smkn8malang.sch.id</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-envelope fa-2x text-gray-300"></i>
+                                            <i class="fas fa-envelope fa-2x text-gray-300 "></i>
                                         </div>
                                     </div>
                                 </div>
