--- a/adminuser/files/sb-admin1/index.html
+++ b/adminuser/files/sb-admin1/index.html
@@ -263,8 +263,8 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Pembayaran Per-Semester</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">Rp. 600.000,00</div>
+                                                Tagihan Spp 2020/2021</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">Rp. 800.000,00</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
