--- a/adminuser/files/sb-admin1/bayar.html
+++ b/adminuser/files/sb-admin1/bayar.html
@@ -209,15 +209,44 @@
 
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Metode Pembayaran</label><br>
-                        <input type="radio" name="metode" id="flexRadioDefault1" value="OVO"> OVO <br>
-                        <label for="exampleInputEmail1" class="form-label">
-                        <input type="radio" name="metode" id="flexRadioDefault1" value="Gopay"> GOPAY <br>
-                        <label for="exampleInputEmail1" class="form-label">
-                        <input type="radio" name="metode" id="flexRadioDefault1" value="Dana"> DANA <br>
-                        <label for="exampleInputEmail1" class="form-label">
-                        <input type="radio" name="metode" id="flexRadioDefault1" value="E-Banking"> E-Banking <br>
+                        <div class="input-group">
+                            <div class="input-group-text">
+                              <input class="form-check-input mt-0" type="radio" value="Ovo"><img src="img/Logo OVO.png" class="main-logo" width="120" />
+                            </div>
+                        </div>
+                        <br>
+                        <div class="input-group">
+                            <div class="input-group-text">
+                              <input class="form-check-input mt-0" type="radio" value="Gopay"><img src="img/gopay.png" class="main-logo" width="180" />
+                            </div>
+                        </div>
+                        <br>
+                        <div class="input-group">
+                            <div class="input-group-text">
+                              <input class="form-check-input mt-0" type="radio" value="Dana"><img src="img/dana.png" class="main-logo" width="120" />
+                            </div>
+                        </div>
+                        <br>
+                        <div class="input-group">
+                            <div class="input-group-text">
+                              <input class="form-check-input mt-0" type="radio" value="Shopee"><img src="img/shopee.png" class="main-logo" width="180" />
+                            </div>
+                        </div>
+                        <br>
+                        <div class="input-group">
+                            <div class="input-group-text">
+                              <input class="form-check-input mt-0" type="radio" value="Visa"><img src="img/visa.png" class="main-logo" width="180" />
+                            </div>
+                        </div>
+                        <br>
+                        <div class="input-group">
+                            <div class="input-group-text">
+                              <input class="form-check-input mt-0" type="radio" value="atm"><img src="img/atm.png" class="main-logo" width="140" />
+                            </div>
+                        </div>
                         </label>
                     </div> 
+                      <br>
                     
                     <div class="form-group">
                         <left>
