--- a/adminuser/files/sb-admin2/dataspp.html
+++ b/adminuser/files/sb-admin2/dataspp.html
@@ -332,7 +332,7 @@
 									    </select>
 						  	        </div>
 
-                                    <a href="dataspp2.html" class="btn btn-primary btn-icon-split mx-4">
+                                    <a href="dataspp2.php" class="btn btn-primary btn-icon-split mx-4">
                                         <span class="icon text-white-30">
                                         <i class="fas fa-search"></i>
                                         </span>
