--- a/adminuser/files/sb-admin1/bayar.html
+++ b/adminuser/files/sb-admin1/bayar.html
@@ -250,13 +250,13 @@
                     
                     <div class="form-group">
                         <left>
+                            <a href="tables.html" class="btn btn-success btn-icon-split">
+                                <span class="icon text-white-50">
+                                    <i class="fas fa-arrow-left"></i>
+                                </span>
+                                <span class="text">Kembali</span>
+                            </a>
                         <a href="konfirmasi.html" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#kt_modal_add_customer">Konfirmasi</a>
-                        <a href="tables.html" class="btn btn-success btn-icon-split">
-                            <span class="icon text-white-50">
-                                <i class="fas fa-arrow-right"></i>
-                            </span>
-                            <span class="text">Kembali</span>
-                        </a>
                         </left>
                      </div>
                   </form>
