--- a/adminuser/files/sb-admin2/atur.html
+++ b/adminuser/files/sb-admin2/atur.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" type="image/png" sizes="32x32" href="img/bayarSPP-5.png">
 
-    <title>bayarSPP | USER</title>
+    <title>bayarSPP | ADMIN</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -38,18 +38,23 @@
                         <div class="row">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-2">Lupa Kata Sandi?</h1>
-                                        <p class="mb-4">Kami mengerti, hal-hal terjadi. Cukup masukkan alamat email Anda di bawah ini
-                                            dan kami akan mengirimkan tautan untuk mengatur ulang kata sandi Anda!</p>
+                                        <h1 class="h4 text-gray-900 mb-2">Atur Ulang Kata Sandi</h1>
+                                        <p class="mb-4">Karakter yang dimasukkan minimal 8 karakter atau lebih.</p>
                                     </div>
                                     <form class="user">
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
+                                            <input type="password" class="form-control form-control-user"
                                                 id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Masukkan Email Anda...">
+                                                placeholder="Masukkan Sandi Baru">
                                         </div>
-                                        <a href="atur.html" class="btn btn-primary btn-user btn-block">
-                                            Reset Kata Sandi
+                                    <form class="user">
+                                            <div class="form-group">
+                                                <input type="password" class="form-control form-control-user"
+                                                    id="exampleInputEmail" aria-describedby="emailHelp"
+                                                    placeholder="Masukkan Sandi Baru Sekali Lagi">
+                                        </div>
+                                        <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                            Konfirmasi
                                         </a>
                                     </form>
                                     <hr>
