--- a/adminuser/files/sb-admin1/register.html
+++ b/adminuser/files/sb-admin1/register.html
@@ -35,6 +35,8 @@
 
                 <!-- Nested Row within Card Body -->
                 <div class="row">
+                        <div class="text-center">
+                        <img src="img/bayarSPP-5.png" class="main-logo" width="80" alt="Awesome Image" />
                         <div class="p-5">
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Buat Akun Baru!</h1>
