--- a/adminuser/files/sb-admin1/login.html
+++ b/adminuser/files/sb-admin1/login.html
@@ -36,7 +36,8 @@
                     <div class="card-body p-5">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-
+                            <div class="text-center">
+                            <img src="img/bayarSPP-5.png" class="main-logo" width="80" alt="Awesome Image" />
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Selamat Datang Kembali!!</h1>
